feat: fix phone validation

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="for">
                     <label for="input_3">Phone: </label>
-                    <input id="input_3" required name="phone" value="" placeholder="+375 (__) ___ ____">
+                    <input class="inputphone" id="input_3" required name="phone" value="" placeholder="+375 (__) ___ ____">
                 </div>
                 <input type="submit" value="Send" class="Send" id="send">
 
