--- a/index.html
+++ b/index.html
@@ -681,61 +681,58 @@
             The rise of mobile devices transforms the way we consume information entirely
             and the world's most elevant channels such as Facebook.
         </p>
-        <div class="faq1rect">
-            <p class="queshead">How to contact with riders emergency?</p>
-            <p class="answ">
-                Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
-            </p>
+        <div id="faqrect1" class="faqrect">
+            <div id="ques1" class="queshead2">
+                How to contact with riders emergency?
+                <div id="plus1" class="plus"><i class="fa-solid fa-plus"></i></div>
+            </div>
+
+            <div id="hidden1" class="hidden">
+                <p class="mainanswer">
+                    Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
+                </p>
+            </div>
 
 
         </div>
-        <div class="faqrect">
-            <p class="queshead2">App installation failed, how to update system information?</p>
-            <div id="plus1" class="plus"><i class="fa-solid fa-plus"></i></div>
+        <div id="faqrect2" class="faqrect">
+            <div id="ques2" class="queshead2">
+                App installation failed, how to update system information?
+                <div id="plus2" class="plus"><i class="fa-solid fa-plus"></i></div>
+            </div>
 
 
 
-        </div>
-        <div id="hidden1" class="hidden">
-            <p class="mainanswer">
-                The rise of mobile devices transforms the way we consume information entirely
-                and the world's most elevant channels such as Facebook.
-            </p>
-        </div>
-
-
-
-        <div class="faqrect">
-            <p class="queshead2">Website reponse taking time, how to improve?</p>
-            <div class="plus" id="plus2"><i class="fa-solid fa-plus"></i></div>
+            <div id="hidden2" class="hidden"><p class="mainanswer">Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p></div>
 
         </div>
-        <div id="hidden2" class="hidden">
-            <p class="mainanswer">
-                The rise of mobile devices transforms the way we consume information entirely
-                and the world's most elevant channels such as Facebook.
-            </p>
+
+
+        <div id="faqrect3" class="faqrect">
+            <div id="ques3" class="queshead2">
+                Website reponse taking time, how to improve?
+                <div class="plus" id="plus3"><i class="fa-solid fa-plus"></i></div>
+            </div>
+
+
+            <div id="hidden3" class="hidden"><p class="mainanswer">Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p></div>
         </div>
 
-        <div class="faqrect">
-            <p class="queshead2">New update fixed all bug and issues</p>
-            <div class="plus" id="plus3"><i class="fa-solid fa-plus"></i></div>
+        <div id="faqrect4" class="faqrect">
+            <div id="ques4" class="queshead2">
+                New update fixed all bug and issues
+                <div class="plus" id="plus4"><i class="fa-solid fa-plus"></i></div>
+            </div>
 
-        </div><div id="hidden3" class="hidden">
-            <p class="mainanswer">
-                The rise of mobile devices transforms the way we consume information entirely
-                and the world's most elevant channels such as Facebook.
-            </p>
+            <div id="hidden4" class="hidden"><p class="mainanswer">Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p></div>
         </div>
-        <div class="faqrect">
-            <p class="queshead2">How to contact with riders emergency?</p>
-            <div class="plus" id="plus4"><i class="fa-solid fa-plus"></i></div>
-        </div>
-        <div id="hidden4" class="hidden">
-            <p class="mainanswer">
-                The rise of mobile devices transforms the way we consume information entirely
-                and the world's most elevant channels such as Facebook.
-            </p>
+        <div id="faqrect5" class="faqrect">
+            <div id="ques5" class="queshead2">
+                How to contact with riders emergency?
+                <div class="plus" id="plus5"><i class="fa-solid fa-plus"></i></div>
+            </div>
+
+            <div id="hidden5" class="hidden"><p class="mainanswer">Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p></div>
         </div>
     </div>
 
